Archive/45cdb8c0caa6e9f704e58133f350d9dc-50d9cfc8a1d350e7409e81e87c2653ba/output
+ g++-4.8 -std=c++11 -O2 -pthread main.cpp
main.cpp:3:15: warning: invalid suffix on literal; C++11 requires a space between literal and identifier [-Wliteral-suffix]
 int& operator ""x12 (unsigned long long i)
               ^
main.cpp:3:17: warning: literal operator suffixes not preceded by '_' are reserved for future standardization [enabled by default]
 int& operator ""x12 (unsigned long long i)
                 ^
main.cpp: In function 'int main()':
main.cpp:12:22: error: lvalue required as increment operand
     std::cout << 0x12++ << std::endl;
                      ^
